2005-12-21  Tomas Mraz <t8m@centrum.cz>

	* modules/pam_succeed_if/pam_succeed_if.c (evaluate_ingroup),
	(evaluate_notingroup): Simplified.
	(evaluate_innetgr), (evaluate_notinnetgr): New functions.
	(evaluate): Added calls to evaluate_(not)innetgr().
	* modules/pam_succeed_if/README: Documented netgroup matching.
	* NEWS: Mentioned the added netgroup matching support.

2005-12-20  Thorsten Kukuk  <kukuk@thkukuk.de>

	* modules/pam_lastlog/pam_lastlog.c (last_login_read): Use
	strftime instead of ctime.

	* po/de.po: Fix typo.

2005-12-19  Thorsten Kukuk  <kukuk@thkukuk.de>

	* libpam/pam_syslog.c: Define LOG_AUTHPRIV as LOG_AUTH on Solaris.
	Reported by Charles_H_Bedford@nbc.gov.

	* modules/pam_time/pam_time.c (check_account): Implement
	support for netgroups.

	* modules/pam_time/time.conf: Document usage of netgroups.

2005-12-16  Thorsten Kukuk  <kukuk@thkukuk.de>

	* modules/pam_group/pam_group.c (check_account): Implement
	support for netgroups.

	* modules/pam_group/group.conf: Add all documentation to this
	example config file and don't reference to outdated configs.

	* modules/pam_group/README: New.

	* modules/pam_group/Makefile.am: Add README to EXTRADIST.

2005-12-15  Thorsten Kukuk  <kukuk@suse.de>

	* modules/pam_lastlog/pam_lastlog.c (last_login_read): Don't report an
	error if user logins the first time.

	* modules/pam_lastlog/README: New.

	* modules/pam_lastlog/Makefile.am: Add README to EXTRADIST.

2005-12-14  Thorsten Kukuk  <kukuk@suse.de>

	* modules/pam_deny/pam_deny.c: Fix comment.

	* doc/pam_appl.sgml: Fix typo.

	Reported by Russell Bateman <russ@windofkeltia.com>

2005-12-12  Thorsten Kukuk  <kukuk@thkukuk.de>

	* release version 0.99.2.1

	* po/de.po: Remove new fuzzy entry

	* NEWS: Add 0.99.2.1 changes

	* configure.in: bump version number to 0.99.2.1

2005-12-12  Dmitry V. Levin  <ldv@altlinux.org>

	Cleanup pam_syslog messages.

	* modules/pam_env/pam_env.c (_expand_arg): Fix compiler warning.