@@ -16,7 +16,7 @@ include_HEADERS = $(addprefix include/security/, _pam_compat.h _pam_macros.h _pa
 noinst_HEADERS = pam_dynamic.h pam_prelude.h pam_private.h pam_tokens.h \
 		pam_modutil_private.h
 
-libpam_la_LDFLAGS = -no-undefined -version-info 81:1:81
+libpam_la_LDFLAGS = -no-undefined -version-info 81:2:81
 if HAVE_VERSIONING
   libpam_la_LDFLAGS += -Wl,--version-script=$(srcdir)/libpam.map
 endif
